typescript-client-generated/v1.4.0/docs/Note.md

# Note

Complete Note schema with server-generated fields

## Properties

Name | Type
------------ | -------------
`name` | string
`content` | string
`description` | string
`include_in_report` | boolean
`timmy_enabled` | boolean
`id` | string
`metadata` | [Array&lt;Metadata&gt;](Metadata.md)
`created_at` | Date
`modified_at` | Date
`deleted_at` | Date
`auto_generated` | boolean
`alias` | number

## Example

```typescript
import type { Note } from '@tmiclient/client'

// TODO: Update the object below with actual values
const example = {
  "name": null,
  "content": null,
  "description": null,
  "include_in_report": null,
  "timmy_enabled": null,
  "id": null,
  "metadata": null,
  "created_at": null,
  "modified_at": null,
  "deleted_at": null,
  "auto_generated": null,
  "alias": null,
} satisfies Note

console.log(example)

// Convert the instance to a JSON string
const exampleJSON: string = JSON.stringify(example)
console.log(exampleJSON)

// Parse the JSON string back to an object
const exampleParsed = JSON.parse(exampleJSON) as Note
console.log(exampleParsed)
```

[[Back to top]](#) [[Back to API list]](../README.md#api-endpoints) [[Back to Model list]](../README.md#models) [[Back to README]](../README.md)


